[tool.poetry]
name = "langchain-agents"
version = "0.1.0"
description = ""
authors = ["Mick Lynch <mick.lynch@gmail.com>"]
readme = "README.md"
packages = [{include = "langchain_agents"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
wikipedia = "^1.4.0"
langchain = "^0.0.218"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
